testsuite/tests/typecheck/should_fail/T2688.stderr

T2688.hs:8:22: error: [GHC-25897]
    • Couldn't match expected type ‘v’ with actual type ‘s’
      ‘s’ is a rigid type variable bound by
        the class declaration for ‘VectorSpace’
        at T2688.hs:5:21
      ‘v’ is a rigid type variable bound by
        the class declaration for ‘VectorSpace’
        at T2688.hs:5:19
    • In the second argument of ‘(/)’, namely ‘s’
      In the second argument of ‘(*^)’, namely ‘(1 / s)’
      In the expression: v *^ (1 / s)
    • Relevant bindings include
        s :: s (bound at T2688.hs:8:10)
        v :: v (bound at T2688.hs:8:5)
        (^/) :: v -> s -> v (bound at T2688.hs:8:5)
